Relabeled menu pages and created html for most.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Editorial</strong> by HTML5 UP</a>
+									<a href="index.html" class="logo"><strong>Maddie Dulle</strong> by HTML5 </a>
 									<ul class="icons">
 										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -36,11 +36,15 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Hi, I’m Editorial<br />
-											by HTML5 UP</h1>
+											<h1>Hi, I’m Maddie!<br/>
+											</h1>
 											<p>A free and fully responsive site template</p>
 										</header>
-										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
+										<p>Maddie has always held a passion for reading starting from a very young age. This passion grew into a love of writing as well, which inspired her to pursue an English Studies and Professional Writing double major and eventually an editing and publishing career.</p>
+
+										<p>She is currently a senior English Studies and Professional Writing student at Miami University. During her years at Miami, she has spent time working as a Level II Certified Writing Tutor, helping fellow students improve their skills, a reader for the MU Press, and helped start the Regional's student newspaper, The Pulse, serving as its Managing Editor. She has also worked with both unpublished and published writers to help develop and promote their books.</p>
+
+										<p>To learn more about her professional experience, download her resume or contact her directly.</p>
 										<ul class="actions">
 											<li><a href="#" class="button big">Learn More</a></li>
 										</ul>
@@ -164,19 +168,17 @@
 										<h2>Menu</h2>
 									</header>
 									<ul>
-										<li><a href="index.html">Homepage</a></li>
-										<li><a href="generic.html">Generic</a></li>
-										<li><a href="elements.html">Elements</a></li>
+										<li><a href="index.html">Home</a></li>
+										<li><a href="editing.html">Editing</a></li>
+										<li><a href="projects.html">Projects</a></li>
 										<li>
-											<span class="opener">Submenu</span>
+											<span class="opener">Writing</span>
 											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
+												<li><a href="#">Creative</a></li>
+												<li><a href="#">Journalism</a></li>
 											</ul>
 										</li>
-										<li><a href="#">Etiam Dolore</a></li>
+										<li><a href="#">Contact</a></li>
 										<li><a href="#">Adipiscing</a></li>
 										<li>
 											<span class="opener">Another Submenu</span>
