Edited sidebars, added story pages, wrote in details.

--- a/home.html
+++ b/home.html
@@ -22,7 +22,13 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Maddie Dulle</strong></a>
+									<a href="home.html" class="logo"><strong>Maddie Dulle</strong></a>
+
+									<a href="home.html" class="logo"><img src="Main Logo.png" alt="" /></a>
+
+									<span class="image object">
+										<img src="Main Logo.png" alt="" />
+									</span>
 									<ul class="icons">
 										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -105,7 +111,7 @@
 
 							<!-- Footer -->
 								<footer id="footer">
-									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+									<p class="copyright">&copy; Maddie Dulle. All rights reserved. 
 								</footer>
 
 						</div>
