Edited the story pages.

--- a/creative.html
+++ b/creative.html
@@ -22,9 +22,9 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="home.html" class="logo"><strong>Editorial</strong> by HTML5 UP</a>
+									<a href="home.html" class="logo"><strong>Maddie Dulle</strong></a>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="#" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 										<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
@@ -38,9 +38,7 @@
 										<h1>Creative Stories</h1>
 									</header>
 
-									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
-
-									<p>Jake picks up a shift at his restaurant job in order to distract himself from his recent breakup, but the night doesn't go according to plan.</p>
+									<p>Many of the creative pieces Maddie writes are fictional short stories. Please enjoy two of the stories included below.</p>
 
 									<hr class="major" />
 
@@ -49,7 +47,7 @@
 									<p>Jake picks up a shift at his restaurant job in order to distract himself from his recent breakup, but the night doesn't go according to plan.</p>
 
 									<ul class="actions">
-										<li><a href="#" class="button big">Read More</a></li>
+										<li><a href="higheststakes.html" class="button big">Read More</a></li>
 									</ul>
 
 									<hr class="major" />
@@ -59,7 +57,7 @@
 									<p>Detective Carter battles the corrupt politics controlling the small town she recently moved to as she attempts to find the Mayor's missing daughter.</p>
 									
 									<ul class="actions">
-										<li><a href="#" class="button big">Read More</a></li>
+										<li><a href="missingpieces.html" class="button big">Read More</a></li>
 									</ul>
 
 								</section>
