--- a/editing.html
+++ b/editing.html
@@ -76,13 +76,13 @@
 						<div class="inner">
 
 							<!-- Search -->
-								<section id="search" class="alt">
-									<form method="post" action="#">
-										<input type="text" name="query" id="query" placeholder="Search" />
-									</form>
-								</section>
+							<section id="search" class="alt">
+								<form method="post" action="#">
+									<input type="text" name="query" id="query" placeholder="Search" />
+								</form>
+							</section>
 
-							<!-- Menu -->
+						<!-- Menu -->
 							<nav id="menu">
 								<header class="major">
 									<h2>Menu</h2>
@@ -102,7 +102,7 @@
 								</ul>
 							</nav>
 
-							<!-- Section -->
+						<!-- Section -->
 							<section>
 								<header class="major">
 									<h2>Get in touch</h2>
@@ -113,10 +113,10 @@
 								</ul>
 							</section>
 
-							<!-- Footer -->
-								<footer id="footer">
-									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-								</footer>
+						<!-- Footer -->
+							<footer id="footer">
+								<p class="copyright">&copy; Maddie Dulle. All rights reserved. 
+							</footer>
 
 						</div>
 					</div>
