Created and formatted more pages.

--- a/home.html
+++ b/home.html
@@ -1,12 +1,7 @@
 <!DOCTYPE HTML>
-<!--
-	Editorial by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
-		<title>Editorial by HTML5 UP</title>
+		<title>Maddie Dulle</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -30,11 +25,7 @@
 										<img src="Main Logo.png" alt="" />
 									</span>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
+										<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									</ul>
 								</header>
 
@@ -44,7 +35,7 @@
 										<header>
 											<h1>Hi, I’m Maddie!<br/>
 											</h1>
-											<p>A free and fully responsive site template</p>
+											<p>Editor, Writer, and Reader<br />
 										</header>
 										<p>I've has always held a passion for reading starting from a very young age. This passion grew into a love of writing as well, which inspired me to pursue an English Studies and Professional Writing double major and eventually an editing and publishing career.</p>
 
@@ -79,40 +70,40 @@
 								</section>
 
 							<!-- Menu -->
-								<nav id="menu">
-									<header class="major">
-										<h2>Menu</h2>
-									</header>
-									<ul>
-										<li><a href="home.html">Home</a></li>
-										<li><a href="editing.html">Editing</a></li>
-										<li><a href="projects.html">Projects</a></li>
-										<li>
-											<span class="opener">Writing</span>
-											<ul>
-												<li><a href="creative.html">Creative</a></li>
-												<li><a href="journalism.html">Journalism</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Contact</a></li>
-									</ul>
-								</nav>
+							<nav id="menu">
+								<header class="major">
+									<h2>Menu</h2>
+								</header>
+								<ul>
+									<li><a href="home.html">Home</a></li>
+									<li><a href="editing.html">Editing</a></li>
+									<li><a href="projects.html">Projects</a></li>
+									<li>
+										<span class="opener">Writing</span>
+										<ul>
+											<li><a href="creative.html">Creative</a></li>
+											<li><a href="journalism.html">Journalism</a></li>
+										</ul>
+									</li>
+									<li><a href="#">Contact</a></li>
+								</ul>
+							</nav>
 
-							<!-- Section -->
-								<section>
-									<header class="major">
-										<h2>Get in touch</h2>
-									</header>
-									<p>If you want to learn more about what services I offer or discuss what I can do for you, feel free to send me an email. I can't wait to hear from you!</p>
-									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="#">maddie.dulle@gmail.com</a></li>
-									</ul>
-								</section>
+						<!-- Section -->
+							<section>
+								<header class="major">
+									<h2>Get in touch</h2>
+								</header>
+								<p>If you want to learn more about what services I offer or discuss what I can do for you, feel free to send me an email. I can't wait to hear from you!</p>
+								<ul class="contact">
+									<li class="icon solid fa-envelope"><a href="#">maddie.dulle@gmail.com</a></li>
+								</ul>
+							</section>
 
-							<!-- Footer -->
-								<footer id="footer">
-									<p class="copyright">&copy; Maddie Dulle. All rights reserved. 
-								</footer>
+						<!-- Footer -->
+							<footer id="footer">
+								<p class="copyright">&copy; Maddie Dulle. All rights reserved. 
+							</footer>
 
 						</div>
 					</div>
