--- a/unidiversity.html
+++ b/unidiversity.html
@@ -131,6 +131,10 @@
 									
 								</section>
 
+								<ul class="actions">
+									<li><a href="higheststakes.html" class="button big">Read Published Article</a></li>
+								</ul>
+
 						</div>
 					</div>
 
