--- a/editing.html
+++ b/editing.html
@@ -1,12 +1,7 @@
 <!DOCTYPE HTML>
-<!--
-	Editorial by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
-		<title>Generic - Editorial by HTML5 UP</title>
+		<title>Editing Experience</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -24,23 +19,17 @@
 								<header id="header">
 									<a href="home.html" class="logo"><strong>Maddie Dulle</strong></a>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
+										<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									</ul>
 								</header>
 
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<h1>Experience</h1>
+										<h1>Editorial Experience</h1>
 									</header>
 
-									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
-
-									<p>Aside from the editorial experience Maddie has had as a student, she has also participated in a number of roles that have allowed her to sharpen her editorial skills while gaining valuable experience along the way.</p>
+									<p>Aside from the editorial experience I've had as a student, I have also participated in a number of roles that have allowed me to sharpen my editorial skills while gaining valuable experience along the way.</p>
 									
 
 									<hr class="major" />
@@ -49,7 +38,7 @@
 									
 									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
 
-									<p>Since her sophomore year of college, Maddie has served as a Level II Certified Writing Tutor for the Tutoring and Learning Center, the TLC, on campus. This work has allowed her to help countless students brainstorm, plan, revise, and edit their various assignments. These assignments have included simple one-page essays, creative works, extensive research papers, capstone projects, and more.</p> 
+									<p>Since my sophomore year of college, I've has served as a Level II Certified Writing Tutor for the Tutoring and Learning Center, the TLC, on campus. This work has allowed her to help countless students brainstorm, plan, revise, and edit their various assignments. These assignments have included simple one-page essays, creative works, extensive research papers, capstone projects, and more.</p> 
 									<p>This role has also helped earn her, along with the TLC, a positive reputation throughout campus, as many professors often personally recommend her to students. </p>
 
 									<hr class="major" />
