Added images and deleted the search feature.

--- a/bodypapers.html
+++ b/bodypapers.html
@@ -28,6 +28,12 @@
 
 							<!-- Content -->
 								<section>
+
+									<span class="image object">
+										<img src="images/bodypapers.jpeg" alt="image of Maddie Dulle" width="400
+										"/>
+									</span>
+
 									<header class="main">
 										<h1>Grace Talusan, Author of <em>The Body Papers</em>, Visits Miami</h1>
 									</header>
