--- a/cincystate.html
+++ b/cincystate.html
@@ -27,6 +27,12 @@
 							</header>
 
 							<!-- Content -->
+								
+							<span class="image object">
+								<img src="images/cincystate.png" alt="image of Maddie Dulle" width="400
+								"/>
+							</span>
+
 								<section>
 									<header class="main">
 										<h1>Miami and Cincinnati State Collaboration Offers Students New Opportunities</h1>
@@ -68,13 +74,6 @@
 				<!-- Sidebar -->
 					<div id="sidebar">
 						<div class="inner">
-
-							<!-- Search -->
-								<section id="search" class="alt">
-									<form method="post" action="#">
-										<input type="text" name="query" id="query" placeholder="Search" />
-									</form>
-								</section>
 
 							<!-- Menu -->
 							<nav id="menu">
