--- a/laserengraving.html
+++ b/laserengraving.html
@@ -27,6 +27,12 @@
 							</header>
 
 							<!-- Content -->
+								
+								<span class="image object">
+									<img src="images/library.jpeg" alt="image of Maddie Dulle" width="400
+								"/>
+								</span>
+							
 								<section>
 									<header class="main">
 										<h1>Laser Engravings at Gardner-Harvey Library</h1>
@@ -76,12 +82,6 @@
 					<div id="sidebar">
 						<div class="inner">
 
-							<!-- Search -->
-								<section id="search" class="alt">
-									<form method="post" action="#">
-										<input type="text" name="query" id="query" placeholder="Search" />
-									</form>
-								</section>
 
 							<!-- Menu -->
 							<nav id="menu">
