--- a/unidiversity.html
+++ b/unidiversity.html
@@ -27,6 +27,12 @@
 							</header>
 
 							<!-- Content -->
+								
+								<span class="image object">
+									<img src="images/unidiversity.jpeg" alt="image of Maddie Dulle" width="400
+								"/>
+								</span>
+							
 								<section>
 									<header class="main">
 										<h1>Missing Pieces</h1>
@@ -144,13 +150,6 @@
 				<!-- Sidebar -->
 					<div id="sidebar">
 						<div class="inner">
-
-							<!-- Search -->
-								<section id="search" class="alt">
-									<form method="post" action="#">
-										<input type="text" name="query" id="query" placeholder="Search" />
-									</form>
-								</section>
 
 							<!-- Menu -->
 							<nav id="menu">
