Added boxes, download icons, and mini logos to the sidebar.

--- a/creative.html
+++ b/creative.html
@@ -32,9 +32,11 @@
 										<h1>Creative Stories</h1>
 									</header>
 
-									<p>Many of the creative pieces Maddie writes are fictional short stories. Please enjoy two of the stories included below.</p>
+									<p>Many of the creative pieces I write are fictional short stories. Please enjoy two of the stories included below.</p>
 
 									<hr class="major" />
+
+									<div class="box">
 
 									<h2>The Highest Stakes</h2>
 
@@ -44,7 +46,11 @@
 										<li><a href="higheststakes.html" class="button big">Read More</a></li>
 									</ul>
 
+								</div>
+
 									<hr class="major" />
+
+									<div class="box">
 
 									<h2>Missing Pieces</h2>
 
@@ -53,6 +59,7 @@
 									<ul class="actions">
 										<li><a href="missingpieces.html" class="button big">Read More</a></li>
 									</ul>
+								</div>
 
 								</section>
 
@@ -97,6 +104,7 @@
 
 						<!-- Footer -->
 							<footer id="footer">
+								<a href="home.html" class="logo"><img src="images/tmlogo.png" alt="" width="75"/></a>
 								<p class="copyright">&copy; Maddie Dulle. All rights reserved. 
 							</footer>
 
