--- a/higheststakes.html
+++ b/higheststakes.html
@@ -292,9 +292,10 @@
 							</section>
 
 						<!-- Footer -->
-							<footer id="footer">
-								<p class="copyright">&copy; Maddie Dulle. All rights reserved. 
-							</footer>
+						<footer id="footer">
+							<a href="home.html" class="logo"><img src="images/tmlogo.png" alt="" width="75"/></a>
+							<p class="copyright">&copy; Maddie Dulle. All rights reserved. 
+						</footer>
 
 						</div>
 					</div>
