--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Hi, I’m Maddie!<br/>
+											<h1>Hi, I'm Maddie!<br/>
 											</h1>
 											<p>Editor, Writer, and Reader<br />
 										</header>
@@ -40,7 +40,7 @@
 
 										<p>To learn more about my professional experience, download my resume or contact me directly.</p>
 										<ul class="actions">
-											<li><a href="#" class="button big">Resume</a></li>
+											<li><a href="#" class="button icon solid fa-download">Resume</a></li>
 											<li><a href="#" class="button big">Contact</a></li>
 										</ul>
 									</div>
@@ -92,6 +92,7 @@
 
 						<!-- Footer -->
 							<footer id="footer">
+								<a href="home.html" class="logo"><img src="images/tmlogo.png" alt="" width="75"/></a>
 								<p class="copyright">&copy; Maddie Dulle. All rights reserved. 
 							</footer>
 
