--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,7 @@
 									<p>To see the finished Ebook, download it here:</p>
 
 									<ul class="actions">
-										<li><a href="#" class="button big">Download</a></li>
+										<li><a href="#" class="button icon solid fa-download">Download</a></li>
 									</ul>
 									 
 
@@ -56,7 +56,7 @@
 									<p>To see the finished Literary Journal, download it here: .</p>
 
 									<ul class="actions">
-										<li><a href="#" class="button big">Download</a></li>
+										<li><a href="#" class="button icon solid fa-download">Download</a></li>
 									</ul>
 									
 
@@ -104,9 +104,10 @@
 							</section>
 
 						<!-- Footer -->
-							<footer id="footer">
-								<p class="copyright">&copy; Maddie Dulle. All rights reserved. 
-							</footer>
+						<footer id="footer">
+							<a href="home.html" class="logo"><img src="images/tmlogo.png" alt="" width="75"/></a>
+							<p class="copyright">&copy; Maddie Dulle. All rights reserved. 
+						</footer>
 
 						</div>
 					</div>
