--- a/missingpieces.html
+++ b/missingpieces.html
@@ -158,14 +158,13 @@
 											<li><a href="journalism.html">Journalism</a></li>
 										</ul>
 									</li>
-									<li><a href="#">Contact</a></li>
 								</ul>
 							</nav>
 
 						<!-- Section -->
 							<section>
 								<header class="major">
-									<h2>Get in touch</h2>
+									<h2 class="contact">Get in touch</h2>
 								</header>
 								<p>If you want to learn more about what services I offer or discuss what I can do for you, feel free to send me an email. I can't wait to hear from you!</p>
 								<ul class="contact">
@@ -174,10 +173,10 @@
 							</section>
 
 						<!-- Footer -->
-						<footer id="footer">
-							<a href="home.html" class="logo"><img src="images/tmlogo.png" alt="" width="75"/></a>
-							<p class="copyright">&copy; Maddie Dulle. All rights reserved. 
-						</footer>
+							<footer id="footer">
+								<a href="home.html" class="logo"><img src="images/tmlogo.png" alt="" width="75"/></a>
+								<p class="copyright">&copy; Maddie Dulle. All rights reserved.</p> 
+							</footer>
 
 
 						</div>
