--- a/projects.html
+++ b/projects.html
@@ -74,40 +74,39 @@
 
 
 						<!-- Menu -->
-							<nav id="menu">
-								<header class="major">
-									<h2>Menu</h2>
-								</header>
-								<ul>
-									<li><a href="home.html">Home</a></li>
-									<li><a href="editing.html">Editing</a></li>
-									<li><a href="projects.html">Projects</a></li>
-									<li>
-										<span class="opener">Writing</span>
-										<ul>
-											<li><a href="creative.html">Creative</a></li>
-											<li><a href="journalism.html">Journalism</a></li>
-										</ul>
-									</li>
-									<li><a href="#">Contact</a></li>
-								</ul>
-							</nav>
+						<nav id="menu">
+							<header class="major">
+								<h2>Menu</h2>
+							</header>
+							<ul>
+								<li><a href="home.html">Home</a></li>
+								<li><a href="editing.html">Editing</a></li>
+								<li><a href="projects.html">Projects</a></li>
+								<li>
+									<span class="opener">Writing</span>
+									<ul>
+										<li><a href="creative.html">Creative</a></li>
+										<li><a href="journalism.html">Journalism</a></li>
+									</ul>
+								</li>
+							</ul>
+						</nav>
 
-						<!-- Section -->
-							<section>
-								<header class="major">
-									<h2>Get in touch</h2>
-								</header>
-								<p>If you want to learn more about what services I offer or discuss what I can do for you, feel free to send me an email. I can't wait to hear from you!</p>
-								<ul class="contact">
-									<li class="icon solid fa-envelope"><a href="#">maddie.dulle@gmail.com</a></li>
-								</ul>
-							</section>
+					<!-- Section -->
+						<section>
+							<header class="major">
+								<h2 class="contact">Get in touch</h2>
+							</header>
+							<p>If you want to learn more about what services I offer or discuss what I can do for you, feel free to send me an email. I can't wait to hear from you!</p>
+							<ul class="contact">
+								<li class="icon solid fa-envelope"><a href="#">maddie.dulle@gmail.com</a></li>
+							</ul>
+						</section>
 
-						<!-- Footer -->
+					<!-- Footer -->
 						<footer id="footer">
 							<a href="home.html" class="logo"><img src="images/tmlogo.png" alt="" width="75"/></a>
-							<p class="copyright">&copy; Maddie Dulle. All rights reserved. 
+							<p class="copyright">&copy; Maddie Dulle. All rights reserved.</p> 
 						</footer>
 
 						</div>
