Started to add style in css.

--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Maddie Dulle</title>
+		<title>Home</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -33,7 +33,7 @@
 										<header>
 											<h1>Hi, I'm Maddie!<br/>
 											</h1>
-											<p>Editor, Writer, and Reader<br />
+											<p class="title">Editor, Writer, and Reader<br />
 										</header>
 										<p>I've has always held a passion for reading starting from a very young age. This passion grew into a love of writing as well, which inspired me to pursue an English Studies and Professional Writing double major and eventually an editing and publishing career.</p>
 
