Finished adding pages and edits.

--- a/home.html
+++ b/home.html
@@ -19,7 +19,6 @@
 							<header id="header">
 									
 								<a href="home.html" class="logo"><img src="images/tlogo.png" alt="" width="200"/></a>
-								<a href="https://www.linkedin.com/in/maddie-dulle-24250221b/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a>
 								
 								<ul class="icons">
 									<li><a href="https://www.linkedin.com/in/maddie-dulle-24250221b/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
@@ -37,7 +36,7 @@
 										</header>
 										<p>I've has always held a passion for reading starting from a very young age. This passion grew into a love of writing as well, which inspired me to pursue an English Studies and Professional Writing double major and eventually an editing and publishing career.</p>
 
-										<p>I'm currently a senior English Studies and Professional Writing student at Miami University. During my years at Miami, I have spent time working as a Level II Certified Writing Tutor, helping fellow students improve their skills, a reader for the MU Press, and helped start the Regional's student newspaper, The Pulse, serving as its Managing Editor. I've also worked with both unpublished and published writers to help develop and promote their books.</p>
+										<p>I'm currently a senior English Studies and Professional Writing student at Miami University. During my years at Miami, I have spent time working as a Level II Certified Writing Tutor helping fellow students improve their skills, a reader for the MU Press, and helped start the Regional's student newspaper, The Pulse, serving as its Managing Editor. I've also worked with both unpublished and published writers to help develop and promote their books.</p>
 
 										<p>To learn more about my professional experience, download my resume or contact me directly.</p>
 
@@ -91,7 +90,7 @@
 
 						<!-- Footer -->
 							<footer id="footer">
-								<a href="home.html" class="logo"><img src="images/tmlogo.png" alt="" width="75"/></a>
+								<a href="home.html" class="logo"><img src="images/tmlogo.png" alt="" width="50"/></a>
 								<p class="copyright">&copy; Maddie Dulle. All rights reserved.</p> 
 							</footer>
 
