--- a/journalism.html
+++ b/journalism.html
@@ -18,7 +18,7 @@
 							<!-- Header -->
 							<header id="header">
 									
-								<a href="home.html" class="logo"><img src="images/logo.png" alt="" width="150"/></a>
+								<a href="home.html" class="logo"><img src="images/tlogo.png" alt="" width="200"/></a>
 								
 								<ul class="icons">
 									<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
@@ -105,7 +105,6 @@
 											<li><a href="journalism.html">Journalism</a></li>
 										</ul>
 									</li>
-									<li><a href="#">Contact</a></li>
 								</ul>
 							</nav>
 
@@ -122,7 +121,7 @@
 
 						<!-- Footer -->
 						<footer id="footer">
-							<a href="home.html" class="logo"><img src="images/tmlogo.png" alt="" width="75"/></a>
+							<a href="home.html" class="logo"><img src="images/tmlogo.png" alt="" width="50"/></a>
 							<p class="copyright">&copy; Maddie Dulle. All rights reserved. 
 						</footer>
 
