Fixed images on journalism pages.

--- a/bodypapers.html
+++ b/bodypapers.html
@@ -29,7 +29,7 @@
 							<!-- Content -->
 								<section>
 
-									<span class="image object">
+									<span class="image center-image">
 										<img src="images/bodypapers.jpeg" alt="image of Maddie Dulle" width="400
 										"/>
 									</span>
