--- a/cincystate.html
+++ b/cincystate.html
@@ -32,7 +32,7 @@
 
 								<section>
 
-							<span class="image object">
+							<span class="image">
 								<img src="images/cincystate.png" alt="image of Maddie Dulle" width="400
 								"/>
 							</span>
