--- a/laserengraving.html
+++ b/laserengraving.html
@@ -32,7 +32,7 @@
 							
 								<section>
 									
-								<span class="image object">
+								<span class="image">
 									<img src="images/library.jpeg" alt="image of Maddie Dulle" width="400
 								"/>
 								</span>
