Fixed css and added alt descriptions to the remaining pictures.

--- a/bodypapers.html
+++ b/bodypapers.html
@@ -30,7 +30,7 @@
 								<section>
 
 									<span class="image center-image">
-										<img src="images/bodypapers.jpeg" alt="image of Maddie Dulle" width="400
+										<img src="images/bodypapers.jpeg" alt="image of Grace Talusan holding her book" width="400
 										"/>
 									</span>
 
