--- a/cincystate.html
+++ b/cincystate.html
@@ -33,7 +33,7 @@
 								<section>
 
 							<span class="image">
-								<img src="images/cincystate.png" alt="image of Maddie Dulle" width="400
+								<img src="images/cincystate.png" alt="image of Miami and Cincinnati State presidents and vice presidents cutting a cake" width="400
 								"/>
 							</span>
 
