--- a/creative.html
+++ b/creative.html
@@ -32,7 +32,7 @@
 										<h1>Creative Stories</h1>
 									</header>
 
-									<p>Many of the creative pieces I write are fictional short stories. Please enjoy two of the stories included below.</p>
+									<p class="description">Many of the creative pieces I write are fictional short stories. Please enjoy two of the stories included below.</p>
 
 									<hr class="major" />
 
