--- a/editing.html
+++ b/editing.html
@@ -32,7 +32,7 @@
 										<h1>Editorial Experience</h1>
 									</header>
 
-									<p>Aside from the editorial experience I've had as a student, I have also participated in a number of roles that have allowed me to sharpen my editorial skills while gaining valuable experience along the way.</p>
+									<p class="description">Aside from the editorialexperience I've had as a student, I have also participated in a number of roles that have allowed me to sharpen my editorial skills while gaining valuable experience along the way.</p>
 									
 
 									<hr class="major" />
