--- a/laserengraving.html
+++ b/laserengraving.html
@@ -33,7 +33,7 @@
 								<section>
 									
 								<span class="image">
-									<img src="images/library.jpeg" alt="image of Maddie Dulle" width="400
+									<img src="images/library.jpeg" alt="image of utensils able to be engraved" width="400
 								"/>
 								</span>
 									<header class="main">
