--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,7 @@
 										<h1>Projects</h1>
 									</header>
 
-									<p>During my time at Miami, I've produced many projects that utilized and strengthened my editorial skills. Included below are two that demonstrate this.</p>
+									<p class="description">During my time at Miami, I've produced many projects that utilized and strengthened my editorial skills. Included below are two that demonstrate this.</p>
 									
 									<hr class="major" />
 
