--- a/home.html
+++ b/home.html
@@ -45,7 +45,7 @@
 										</ul>
 
 									</div>
-									<span class="image object">
+									<span class="image headshot">
 										<img src="images/headshot.jpg" alt="image of Maddie Dulle"/>
 									</span>
 								</section>
