--- a/editing.html
+++ b/editing.html
@@ -32,7 +32,7 @@
 										<h1>Editorial Experience</h1>
 									</header>
 
-									<p class="description">Aside from the editorialexperience I've had as a student, I have also participated in a number of roles that have allowed me to sharpen my editorial skills while gaining valuable experience along the way.</p>
+									<p class="description">Aside from the editorial experience I've had as a student, I have also participated in a number of roles that have allowed me to sharpen my editorial skills while gaining valuable experience along the way.</p>
 									
 
 									<hr class="major" />
@@ -41,7 +41,7 @@
 
 									<p>Since my sophomore year of college, I've served as a Level II Certified Writing Tutor for the Tutoring and Learning Center, the TLC, on campus. This work has allowed me to help countless students brainstorm, plan, revise, and edit their various assignments. These assignments have included simple one-page essays, creative works, extensive research papers, capstone projects, and more.</p> 
 
-									<p>This role has also helped earn myself, along with the TLC, a positive reputation throughout campus, as many professors often personally recommend my to students. </p>
+									<p>This role has also helped earn myself, along with the TLC, a positive reputation throughout campus, as many professors often personally recommend me to students. </p>
 
 									<hr class="major" />
 
