--- a/home.html
+++ b/home.html
@@ -90,7 +90,7 @@
 
 						<!-- Footer -->
 							<footer id="footer">
-								<a href="home.html" class="logo"><img src="images/tmlogo.png" alt="" width="50"/></a>
+								<a href="home.html" class="logo"><img src="images/tmlogo.png" alt="" width="50"class=mini-logo /></a>
 								<p class="copyright">&copy; Maddie Dulle. All rights reserved.</p> 
 							</footer>
 
