--- a/home.html
+++ b/home.html
@@ -34,11 +34,11 @@
 											</h1>
 											<p class="title">Editor, Writer, and Reader<br />
 										</header>
-										<p>I've has always held a passion for reading starting from a very young age. This passion grew into a love of writing as well, which inspired me to pursue an English Studies and Professional Writing double major and eventually an editing and publishing career.</p>
+										<p>I've always held a passion for reading starting from a very young age. This passion grew into a love of writing as well, which inspired me to pursue an English Studies and Professional Writing double major and eventually an editing and publishing career.</p>
 
 										<p>I'm currently a senior English Studies and Professional Writing student at Miami University. During my years at Miami, I have spent time working as a Level II Certified Writing Tutor helping fellow students improve their skills, a reader for the MU Press, and helped start the Regional's student newspaper, The Pulse, serving as its Managing Editor. I've also worked with both unpublished and published writers to help develop and promote their books.</p>
 
-										<p>To learn more about my professional experience, download my resume or contact me directly.</p>
+										<p>To learn more about my professional experience, download my resume below or contact me directly.</p>
 
 										<ul class="actions">
 											<li><a href="Dulle_Resume.docx" class="button icon solid fa-download">Resume</a></li>
