--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
 								<a href="home.html" class="logo"><img src="images/tlogo.png" alt="" width="200"/></a>
 								
 								<ul class="icons">
-									<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://www.linkedin.com/in/maddie-dulle-24250221b/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								</ul>
 								
 							</header>
